methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:4: error: not found: value red
    makeFlowers(red)
                ^